# process_mining

./: .env.example  .gitignore  README.md  pyproject.toml
data/: solicitacoes_process_mining.json
notebooks/: process_mining.ipynb
src/: config.py
